# rh-report

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  USAGE.md  pyproject.toml  setup.py
examples/: USAGE_GUIDE.md  column_mapping.json  data_example.json  mapping_alternate.json
src/rh_report/: __init__.py  api_client.py  cli.py  data_enrichment.py  utils.py
