[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rh-report"
version = "1.0.0"
description = "CLI tool to query and report Red Hat Catalog container images"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tu Nombre", email = "tu@email.com"}
]
keywords = ["redhat", "container", "images", "catalog", "openshift"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "programming Language :: Python :: 3.14"
]

dependencies = [
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "click>=8.3.1",
    "urllib3>=2.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tuusuario/rh-report"
Documentation = "https://github.com/tuusuario/rh-report#readme"
Repository = "https://github.com/tuusuario/rh-report"
"Bug Tracker" = "https://github.com/tuusuario/rh-report/issues"

[project.scripts]
rh-report = "rh_report.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
